--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -24,7 +24,14 @@
 
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 
+  <!-- Category filter dropdown (Step 1) -->
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- populated at runtime -->
+  </select>
+
   <script src="script.js"></script>
 </body>
 </html>
+
 
